--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
     <!-- Favicon -->
-    <link rel="icon" href="images/favicon.png">
+    <link rel="icon" type="image/png" href="<%= BASE_URL %>favicon.png">
     <!-- Site Title -->
     <!-- <title>Gallerio - Gellery Shop Template</title> -->
     <!-- Bootstrap 4 core CSS -->
@@ -20,7 +20,7 @@
     <link href="css/fontawesome-all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>GGANG</title>
   </head>
   <body>
     <noscript>
